# log-ingestor

./: .env  Cargo.toml  Makefile.toml  README.md  sample.csv
docs/: components.drawio
src/: buffer.rs  buffered_logs.rs  main.rs  process.rs  reader.rs  test_utils.rs
src/processors/: alerts.rs  mod.rs  stats.rs
