[package]
name = "log-ingestor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# main dependencies
tokio = { version = "1", features = ["full"] }
tokio-stream ={ version = "0.1", features = ["io-util"] }
futures = "0.3"
rust_decimal = "1.21"
# observability
tracing = "0.1"
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "time"] }
# serialization
serde = {version = "1.0", features = ["derive"] }
csv-async = { version = "1.2", features = ["tokio"] }
# cli
structopt = "0.3"
# utils
async-trait = "0.1"
dotenv = "0.15"
time = {version  = "0.3.7", features = ["std", "formatting"]}
# errors
anyhow = "1.0"
